feat: обновить правила использования pnpm и убрать лишние строки из документации

--- a/.clinerules/не создавай ничего для теста никаких моковых данных.md
+++ b/.clinerules/не создавай ничего для теста никаких моковых данных.md
@@ -1,3 +1,2 @@
 не создавай ничего для теста никаких моковых данных
-и не звпускай каждый раз сервер после изменения 
-    
+и не запускай каждый раз сервер после изменения
